feat:added redis caching, pagination and updated docs fix:removed useless transaction in update user method refactor:added validation logic for pagination, total pages, changed logs in user handlers, changed logger text color for debug
