# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Junior Golang Developer test task for Effective Mobile",
+        "description": "Junior Golang Developer test task",
         "title": "Jun task api",
         "contact": {},
         "version": "1.0"
@@ -11,7 +11,7 @@
     "paths": {
         "/users": {
             "get": {
-                "description": "Get users using flexible query filters and pagination. You can provide partial values for `name`, `surname`, or `patronymic` — filtering will still work. Each of these parameters is optional and can be used independently or in combination.\nExample: ?limit=5\u0026offset=10\nResponse: 5 users with offset=10\nExample: ?name=al\nResponse: Alex, Alina, etc.\nExample2: ?name=al\u0026surname=sh\nResponse: Alexandr Shprot, Alina Sham, etc.",
+                "description": "Get users using flexible query filters and pagination. You can provide partial values for `name`, `surname`, or `patronymic` — filtering will still work. Each of these parameters is optional and can be used independently or in combination.\n\nExample: ?page=5\u0026page_size=10\nResponse: 10 users with offset=40\n\nExample2: ?name=al\nResponse: Alex, Alina, etc.\n\nExample3: ?name=al\u0026surname=sh\nResponse: Alexandr Shprot, Alina Sham, etc.",
                 "consumes": [
                     "application/json"
                 ],
@@ -49,14 +49,14 @@
                     },
                     {
                         "type": "integer",
-                        "description": "default:0",
-                        "name": "limit",
+                        "description": "min:5",
+                        "name": "page_size",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "description": "default:0",
-                        "name": "offset",
+                        "description": "min:1",
+                        "name": "page",
                         "in": "query"
                     }
                 ],
@@ -301,9 +301,6 @@
                 "gender": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
                 "name": {
                     "type": "string"
                 },
@@ -314,9 +311,6 @@
                     "type": "string"
                 },
                 "surname": {
-                    "type": "string"
-                },
-                "updated_at": {
                     "type": "string"
                 }
             }
